emc2 (1:2.2.2~cvs) unstable; urgency=low

  * move hal_unlink manpage to development package
  * make gcode quick reference link into our own full gcode reference
    instead of the outdated nist document
  * fix stepconf 'pulley' numbers: the 'motor' and 'leadscrew' fields
    were transposed
  * fix stepconf 'charge pump' pin
  * fix stepconf 'external estop' pin
  * fix homing in stepconf-created configurations
  * fix halshow 'watch pin'
  * restore cone rotation when the A-axis moves
  * fix 'scara' sample configuration
  * fix display of home and limit switches on XYZBC machines
  * improve legibility of running line in text area
  * additional french documentation translation, including gcode quickref
  * improve time estimate in gcode File > Properties: it paid no attention to
    requested feed rates
  * fix ZX-plane (G18) arcs in the AXIS preview window
  * fix tripod kinematics example configuration
  * fix "arc in mdi takes forever" bug (SF#1834576)
  * fix gcode documentation of toolchange
  * fix comp311 examples to program Z position
  * fix stepconf for negative and fractional axis SCALEs
  * implement M66 E- (read analog value from gcode)
  * add missing dependency on python2.4-glade
  * fix problem where metric image-to-gcode would go to the safety height
    before setting metric units 

 -- jepler <jepler@unpythonic.net>  Thu, 29 Nov 2007 09:43:05 -0600

emc2 (1:2.2.1) unstable; urgency=low

  * fix packaging of stepconf.glade
  * german translation improvements
  * package additional new-in-2.2.x programs (pumagui, scaragui, hexagui
    tracking-test, teach-in)
  * fix problems using v2.1 var file -- it's silently upgraded with the new
    entries used by v2.2 instead of issing weird errors at startup
  * fix problem with probe_parport on certain machines
  * fix problem with non-integer INTRO_TIME 

 -- Jeff Epler <jepler@unpythonic.net>  Wed,  7 Nov 2007 20:18:34 -0600

emc2 (1:2.2.0) unstable; urgency=low

  * Bump version for release