@@ -1,5 +1,6 @@
 emc2 (1:2.2.2~cvs) unstable; urgency=low
 
+  [ jepler ]
   * move hal_unlink manpage to development package
   * make gcode quick reference link into our own full gcode reference
     instead of the outdated nist document
@@ -25,9 +26,13 @@ emc2 (1:2.2.2~cvs) unstable; urgency=low
   * implement M66 E- (read analog value from gcode)
   * add missing dependency on python2.4-glade
   * fix problem where metric image-to-gcode would go to the safety height
-    before setting metric units 
+    before setting metric units
+  * fix stepconf so that axis doesn't display an 'unknown letter' error
+    when starting a lathe configuration
+  * fix stepconf 'pin 'motion.spindle-speed-in' was already linked' for
+    machines with spindle speed control and spindle feedback
 
- -- jepler <jepler@unpythonic.net>  Thu, 29 Nov 2007 09:43:05 -0600
+ -- Jeff Epler <jepler@unpythonic.net>  Sat,  1 Dec 2007 09:23:39 -0600
 
 emc2 (1:2.2.1) unstable; urgency=low
 
